--- a/QuickText/TextQuick-Info.plist
+++ b/QuickText/TextQuick-Info.plist
@@ -19,13 +19,15 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3</string>
+	<string>1.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.3.3</string>
+	<string>1.4.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSContactsUsageDescription</key>
+	<string>Add contact to main screen</string>
 	<key>NSSupportsSuddenTermination</key>
 	<false/>
 	<key>UIMainStoryboardFile</key>
